--- a/FrontEnd/company-dashboard.html
+++ b/FrontEnd/company-dashboard.html
@@ -299,12 +299,12 @@
             </div>
             <div class="form-row">
                 <div class="form-group">
-                    <label>Arrival Time <span class="required">*</span></label>
-                    <input type="datetime-local" name="start_datetime" class="form-control" required>
+                    <label>Departure Time <span class="required">*</span></label>
+                    <input type="datetime-local" name="start_datetime" class="form-control" >
                 </div>
                 <div class="form-group">
-                    <label>Departure Time <span class="required">*</span></label>
-                    <input type="datetime-local" name="end_datetime" class="form-control" required>
+                    <label>Arrival Time <span class="required">*</span></label>
+                    <input type="datetime-local" name="end_datetime" class="form-control" >
                 </div>
             </div>
         </div>
