passport image in passengerprofile

--- a/FrontEnd/passenger-dashboard.html
+++ b/FrontEnd/passenger-dashboard.html
@@ -201,6 +201,7 @@
                                 <label for="profilePassport">Passport Image</label>
                                 <input type="file" id="profilePassport" name="passport_img" class="form-control-file"
                                     accept="image/*">
+                                     <div id="profilePassportPreview" style="margin-top: 10px;"></div>
                             </div>
 
                             <div class="form-actions">
