added message company before booking flight, changed css font

--- a/FrontEnd/passenger-dashboard.html
+++ b/FrontEnd/passenger-dashboard.html
@@ -54,7 +54,7 @@
             <section id="searchSection" class="dashboard-section active">
                 <div class="section-header">
                     <div>
-                        <h2>🔍 Search Flights</h2>
+                        <h2>Search Flights</h2>
                         <p>Find the perfect flight for your next adventure</p>
                     </div>
                 </div>
@@ -76,10 +76,10 @@
                             <div class="form-group">
                                 <button type="submit" class="btn btn-primary btn-lg"
                                     title="Search for available flights">
-                                    <i class="icon-search"></i> Search Flights
+                                    Search Flights
                                 </button>
                                 <button type="button" class="btn btn-secondary" id="clearSearch"
-                                    title="Clear search fields"><i class="icon-search"></i> Clear</button>
+                                    title="Clear search fields">Clear</button>
                             </div>
                         </div>
                     </form>
@@ -205,7 +205,7 @@
                             </div>
 
                             <div class="form-actions">
-                                <button type="submit" class="btn btn-primary btn-lg">💾 Save Changes</button>
+                                <button type="submit" class="btn btn-primary btn-lg">Save Changes</button>
                                 <button type="button" class="btn btn-secondary" onclick="location.reload()">↻
                                     Reset</button>
                             </div>
