--- a/FrontEnd/company-dashboard.html
+++ b/FrontEnd/company-dashboard.html
@@ -285,30 +285,30 @@
     </div>
 
     <!-- Itinerary Item Template -->
-    <template id="itineraryTemplate">
-        <div class="itinerary-item">
-            <div class="itinerary-header">
-                <span class="itinerary-number">Stop 1</span>
-                <button type="button" class="btn-remove" title="Remove this stop">×</button>
-            </div>
-            <div class="form-row">
-                <div class="form-group">
-                    <label>City <span class="required">*</span></label>
-                    <input type="text" name="city" class="form-control" required placeholder="Enter city name">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group">
-                    <label>Departure Time <span class="required">*</span></label>
-                    <input type="datetime-local" name="start_datetime" class="form-control" >
-                </div>
-                <div class="form-group">
-                    <label>Arrival Time <span class="required">*</span></label>
-                    <input type="datetime-local" name="end_datetime" class="form-control" >
-                </div>
+  <template id="itineraryTemplate">
+    <div class="itinerary-item">
+        <div class="itinerary-header">
+            <span class="itinerary-number">Stop 1</span>
+            <button type="button" class="btn-remove" title="Remove this stop">×</button>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <label>City <span class="required">*</span></label>
+                <input type="text" name="city" class="form-control" required placeholder="Enter city name">
             </div>
         </div>
-    </template>
+        <div class="form-row">
+            <div class="form-group arrival-time-group">
+                <label>Departure Time <span class="required">*</span></label>
+                <input type="datetime-local" name="start_datetime" class="form-control" required>
+            </div>
+            <div class="form-group departure-time-group">
+                <label>Arrival Time <span class="required">*</span></label>
+                <input type="datetime-local" name="end_datetime" class="form-control" required>
+            </div>
+        </div>
+    </div>
+</template>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
