Update home page: remove footer, set 100vh hero with no scrolling and better centering

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
 
-<body>
+<body class="home-page">
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
@@ -37,38 +37,11 @@
                 <p class="hero-subtitle">Book flights with ease, travel with confidence</p>
                 <div class="hero-actions">
                     <a href="register.html" class="btn btn-primary btn-lg">Get Started</a>
-                    
+
                 </div>
             </div>
         </div>
     </section>
-
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>SkyBooker</h3>
-                    <p>Your trusted flight booking platform for seamless travel experiences.</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="login.html">Login</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>For Users</h4>
-                    <ul>
-                        <li><a href="register.html?type=passenger">Passenger Sign Up</a></li>
-                        <li><a href="register.html?type=company">Company Sign Up</a></li>
-                        <li><a href="login.html">Login</a></li>
-                    </ul>
-                </div>
-        </div>
-    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
